fix white space issue on user login page and improve search input styling

--- a/app/assets/stylesheets/modules/browse/_browse_layouts.scss
+++ b/app/assets/stylesheets/modules/browse/_browse_layouts.scss
@@ -26,6 +26,11 @@
   }
 }
 
+#search{
+  padding: .4em;
+  border-radius: 5px;
+}
+
 .users{
   text-align: center;
   background: transparent;
